GUI纹理和GUI机制调整